--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Event KeyCodes</title>
 
+    <!-- CSS -->
     <link rel="stylesheet" href="./style.css" />
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+      integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <div class="container">
@@ -22,6 +31,24 @@
         <small>e.code</small>
       </div>
     </div>
+
+    <footer>
+      <div class="icons">
+        <!-- <a href="#" class="fab fa-facebook"></a> -->
+        <!-- <a href="#" class="fab fa-twitter"></a> -->
+        <a
+          href="https://www.instagram.com/g4ieku_official/"
+          class="fab fa-instagram"
+        ></a>
+        <a href="https://www.linkedin.com/feed/" class="fab fa-linkedin"></a>
+        <!-- <a href="#" class="fab fa-pinterest"></a> -->
+      </div>
+
+      <div class="credit">
+        created by <span>Grzegorz Czekaj gctechlab.pl</span> &copy all rights
+        reserved
+      </div>
+    </footer>
 
     <script src="./script.js"></script>
   </body>
