add javascript and Flickering animation

--- a/index.html
+++ b/index.html
@@ -17,17 +17,21 @@
     />
   </head>
   <body>
+    <div id="instruction">
+      <h1 class="text-glow">Press any key</h1>
+    </div>
+
     <div class="container">
       <div class="key">
-        a
+        <span>a</span>
         <small>e.key</small>
       </div>
       <div class="key">
-        65
+        <span>65</span>
         <small>e.keyCode</small>
       </div>
       <div class="key">
-        keyA
+        <span>keyA</span>
         <small>e.code</small>
       </div>
     </div>
